@@ -1,5 +1,16 @@
 2007-07-01  Luca Bruno  <lethalman88@gmail.com>
 
+	* syx/syx-error.c (syx_error_init): message not understoods are handled differently
+
+	* st/kernel/Object.st (doesNotUnderstand). added (issue #2)
+
+	* syx/syx-interp.c (syx_interp_send_unary): use syx_does_not_understand (issue #2)
+	(syx_interp_send_binary): idem
+	(syx_interp_send_message): idem
+	(syx_interp_send_super): idem
+
+	* syx/syx-error.h (syx_does_not_understand): added (issue #2)
+
 	* syx/syx-init.c (_syx_file_in_basic): load Magnitude.st
 
 	* src/main.c (_getopt_do): do not set the ImageFileName
